<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterVerifySchoolCredentials"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/register_verify_cancel_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/syncopate_bold"
        android:text="@string/register_cancel_button"
        android:textColor="#888888"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="147dp"
            android:layout_height="142dp"
            android:layout_marginStart="123dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="123dp"
            android:src="@drawable/ncc_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/verify_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/dm_sans"
            android:text="@string/verify_email_text"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/register_first_name_text"
            android:layout_width="280dp"
            android:layout_height="53dp"
            android:layout_marginTop="268dp"
            android:autofillHints="First Name"
            android:ems="10"
            android:hint="@string/register_first_name_text"
            android:inputType="textPersonName"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/register_last_name_edit_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:autofillHints="Last Name"
            android:ems="10"
            android:hint="@string/register_last_name_text"
            android:inputType="textPersonName"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="@+id/register_first_name_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_first_name_text"
            app:layout_constraintTop_toBottomOf="@+id/register_first_name_text" />

        <EditText
            android:id="@+id/register_phone_num_edit_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/register_phone_num_text"
            android:inputType="phone"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="@+id/register_first_name_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_first_name_text"
            app:layout_constraintTop_toBottomOf="@+id/register_last_name_edit_text" />

        <EditText
            android:id="@+id/register_ID_edit_text3"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:autofillHints="School ID"
            android:ems="10"
            android:hint="@string/school_id_hint"
            android:inputType="number"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="@+id/register_first_name_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_first_name_text"
            app:layout_constraintTop_toBottomOf="@+id/register_phone_num_edit_text" />

        <EditText
            android:id="@+id/register_email_edit_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:ems="10"
            android:hint="@string/school_email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="@+id/register_first_name_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_first_name_text"
            app:layout_constraintTop_toBottomOf="@+id/register_ID_edit_text3" />

        <EditText
            android:id="@+id/register_paswrd_edit_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/register_pswrd_text"
            android:inputType="textPassword"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="@+id/register_first_name_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_first_name_text"
            app:layout_constraintTop_toBottomOf="@+id/register_email_edit_text" />

        <android.widget.Button
            android:id="@+id/register_verify_button"
            android:layout_width="121dp"
            android:layout_height="60dp"
            android:layout_marginStart="76dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button2"
            android:text="@string/register_verify_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_paswrd_edit_text"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_paswrd_edit_text"
            app:layout_constraintVertical_bias="0.631"
            tools:visibility="invisible" />

        <android.widget.Button
            android:id="@+id/register_register_button"
            android:layout_width="121dp"
            android:layout_height="60dp"
            android:layout_marginStart="76dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button2"
            android:text="@string/register_register_button"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_paswrd_edit_text"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_paswrd_edit_text"
            app:layout_constraintVertical_bias="0.631" />

</androidx.constraintlayout.widget.ConstraintLayout>