<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="7dp"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".driver.bottomsheetbehavior.DriverEarningsBottomSheetFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/outerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/wellDone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/well_done_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/driver_wellDoneText_label"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/dm_sans"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/earnings_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/driver_earnings_label"
                android:fontFamily="@font/dm_sans_medium"/>

            <TextView
                android:id="@+id/earnings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/driver_earnings_text"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/dm_sans"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/next_button"
                android:fontFamily="@font/dm_sans"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/cash_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/cash_out_button"
                android:fontFamily="@font/dm_sans"
                android:background="@drawable/button"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>