<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="147dp"
        android:layout_height="142dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="123dp"
        android:src="@drawable/ncc_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/register_pswrd_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/dm_sans"
        android:text="@string/login_label"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        app:flow_horizontalBias="0.5"/>

    <Button
        android:id="@+id/login_cancel_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/syncopate_bold"
        android:text="@string/register_cancel_button"
        android:textColor="#888888"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="280dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="@string/school_email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_login" />

    <android.widget.Button
        android:id="@+id/login_next_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/login_button_text"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>